--- a/app/src/main/res/layout/maps_activity.xml
+++ b/app/src/main/res/layout/maps_activity.xml
@@ -3,6 +3,7 @@
     android:layout_height="match_parent">
 
     <sample.maps.ui.maps.MapsViewImpl
+        android:id="@+id/map_view"
         android:layout_height="match_parent"
         android:layout_width="match_parent"/>
 </FrameLayout>
