--- a/app/src/main/res/layout/maps_view.xml
+++ b/app/src/main/res/layout/maps_view.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:elevation="4dp"
-        android:src="@android:drawable/ic_input_add"
+        android:src="@drawable/ic_add_24dp"
         android:layout_gravity="bottom|right"
         android:layout_margin="16dp"/>
 
