--- a/app/src/main/res/layout/location_list_activity.xml
+++ b/app/src/main/res/layout/location_list_activity.xml
@@ -3,7 +3,7 @@
     android:layout_height="match_parent">
 
     <sample.maps.ui.list.LocationListViewImpl
-        android:id="@+id/list_view"
+        android:id="@+id/locationListView"
         android:layout_height="match_parent"
         android:layout_width="match_parent"/>
 </FrameLayout>
