--- a/app/src/main/res/layout/location_list_item.xml
+++ b/app/src/main/res/layout/location_list_item.xml
@@ -11,7 +11,7 @@
         android:background="@color/colorPrimaryDark"/>
 
     <TextView
-        android:id="@+id/label"
+        android:id="@+id/locationLabel"
         android:layout_width="match_parent"
         android:layout_height="64dp"
         android:gravity="center_vertical"
