--- a/app/src/main/res/layout/location_list_view.xml
+++ b/app/src/main/res/layout/location_list_view.xml
@@ -5,7 +5,7 @@
     android:splitMotionEvents="false">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/list"
+        android:id="@+id/locationList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
