--- a/app/src/main/res/layout/maps_view.xml
+++ b/app/src/main/res/layout/maps_view.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"/>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/add"
+        android:id="@+id/addButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:elevation="4dp"
