--- a/app/src/main/res/menu/maps_menu.xml
+++ b/app/src/main/res/menu/maps_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/list"
+        android:id="@+id/locationList"
         app:showAsAction="always"
         android:title="@string/location_list" />
 </menu>
