--- a/app/src/main/res/layout/maps_view.xml
+++ b/app/src/main/res/layout/maps_view.xml
@@ -3,7 +3,7 @@
     android:layout_height="match_parent">
 
     <com.google.android.gms.maps.MapView
-        android:id="@+id/map"
+        android:id="@+id/googleMapView"
         android:layout_height="match_parent"
         android:layout_width="match_parent"/>
 
